# TestShader

./: .gitignore  CMakeLists.txt  TestShader.sln  build_win32.bat
1Start/: 1Start.vcxproj  1Start.vcxproj.filters  MyShader.cpp  MyShader.h  Square.cpp  Square.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Triangle.cpp  Triangle.h  Vertex.cpp  Vertex.h  Window.h  main.cpp
glfw3/: CMakeLists.txt  glfw3.vcxproj  glfw3.vcxproj.filters
shader/: shader.fs  shader.vs  texture_shader.frag  texture_shader.vert  transform_shader.vert  triangle_shader.fs  triangle_shader.vs  vertex_shader.frag
src/: CMakeLists.txt  MyShader.cpp  Square.cpp  Square.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Triangle.cpp  Vertex.cpp  Vertex.h  Window.cpp  main.cpp
